// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form.Checkbox default render for checkboxes in a group 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
        >
          <label
            class="PicassoFormLabel-root"
            for="checkbox-group"
          >
            <span
              class="PicassoFormLabel-medium"
            >
              checkbox-group-label
               (optional)
            </span>
          </label>
          <div
            class="flex flex-col flex-wrap -mr -mb"
            name="checkbox-group"
          >
            <div
              class="box-border flex w-full flex-col flex-wrap items-start justify-start mt-0 mb-0"
            >
              <div
                class="box-border m-0 leading-none pt-0 pb-0 [&>.picasso-checkbox]:mb-[0.5em]"
              >
                <label
                  class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
                >
                  <span
                    class="inline-flex PicassoCheckbox-checkboxWrapper"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input"
                          data-indeterminate="false"
                          name="checkbox-group"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="PicassoCheckbox-uncheckedIcon"
                        />
                      </span>
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      checkbox-label-0
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="box-border m-0 leading-none pt-0 pb-0 [&>.picasso-checkbox]:mb-[0.5em]"
              >
                <label
                  class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
                >
                  <span
                    class="inline-flex PicassoCheckbox-checkboxWrapper"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input"
                          data-indeterminate="false"
                          name="checkbox-group"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="PicassoCheckbox-uncheckedIcon"
                        />
                      </span>
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      checkbox-label-1
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form.Checkbox default render for single checkbox 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
          data-testid="single-checkbox"
        >
          <label
            class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
          >
            <span
              class="inline-flex PicassoCheckbox-checkboxWrapper"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="single-checkbox"
                    name="single-checkbox"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="PicassoCheckbox-uncheckedIcon"
                  />
                </span>
              </span>
            </span>
            <span
              class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
            >
              <span
                class="PicassoFormLabel-medium"
              >
                The checkbox label
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form.Checkbox required with asterisk single checkbox 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
          data-testid="single-checkbox"
        >
          <label
            class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
          >
            <span
              class="inline-flex PicassoCheckbox-checkboxWrapper"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="single-checkbox"
                    name="single-checkbox"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="PicassoCheckbox-uncheckedIcon"
                  />
                </span>
              </span>
            </span>
            <span
              class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
            >
              <span
                class="PicassoFormLabel-medium"
              >
                <span
                  class="PicassoFormLabel-asterisk"
                >
                  *
                </span>
                The checkbox label
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form.Checkbox when required prop is passed does not set "required" attribute to input tag, to avoid Chrome tooltip 1`] = `
<input
  class="PrivateSwitchBase-input"
  data-indeterminate="false"
  id="single-checkbox"
  name="single-checkbox"
  type="checkbox"
  value=""
/>
`;
